--- a/main.html
+++ b/main.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+<NAv>
+        <Ul style="list-style-type: disc;">
+           <a href="https://fastly.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs"><li>Home </li></a>
+           <a href="https://fastly.picsum.photos/id/124/200/300.jpg?hmac=nYVSpzq7GaVkXrTk1whDiPbZdNRgtpJJXZJjvmUtFp0"><li>About us </li></a>
+           <a href="https://fastly.picsum.photos/id/125/200/300.jpg?hmac=yLvRBwUcr6LYWuGaGk05UjiU5vArBo3Idr3ap5tpSxU"><li>Contact us</li></a>
+
+        </Ul>
+    </NAv>
+	<h1>3 random images</h1>
+<img src="https://picsum.photos/id/123/200/300" alt="cric">
+<img src="https://picsum.photos/id/124/200/300" alt="does">
+<img src="https://picsum.photos/id/125/200/300" alt="grow">
     <script type="text/javascript" src="./script.js">
 </script>
 
